--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
-    "builds": [
-        {
-            "src": "./dist/**/*",
-            "use": "@vercel/static"
-        }
-    ],
-    "outputDirectory": "dist"
+    "build": {
+        "outputDirectory": "dist"
+    }
 }
